--- a/src/components/alg/alg-conspect/sp/pages/elem-sp19.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp19.html
@@ -20,7 +20,7 @@
     <a href="#p1">Графы #1. Базовые понятия теории графов</a>
   </p>
   <p>
-    <a href="#task1">Задача A. Светофорчики</a>
+        <a href="#task1">Задача A. Светофорчики</a>
     <br><a href="#task2">Задача B. Дороги</a>
     <br><a href="#task3">Задача C. Цветной дождь</a>
     <br><a href="#task4">Задача D. Любовный треугольник</a>
@@ -42,6 +42,230 @@
 <article class="article">
   <div class="anchor" id="p1"></div>
   <h3>Графы #1. Базовые понятия теории графов</h3>
+
+  <h4>Неориентированные графы</h4>
+
+  <p><strong>Определение 1.</strong> Неориентированным графом называется упорядоченная пара двух множеств G = (V, E), где 0 &lt; |V| &lt; ∞, а E — подмножество    всевозможных неупорядоченных пар различных двух вершин из V.   Приведем примеры неориентированных графов: Pic 1. Неориентированные графы 1. с числовым обозначением вершин, 2. с буквенным обозначением вершин.</p>
+  <p>На рис. 1 представлены диаграммы специального вида, которые состоят из объектов двух видов:</p>
+  <ol>
+    <li>из кружочков (вершин);</li>
+    <li>отрезков или линий, которые соединяют пары вершин (ребра).</li>
+  </ol>
+  <p>Таким образом:</p>
+  <ol>
+    <li>граф (на рис. 1 a) содержит 6 вершин, пронумерованных от 1 до 6, и 5 ребер;</li>
+    <li>граф (на рис. 1 b) содержит 5 вершин, пронумерованных от a до e, и 5 ребер.</li>
+  </ol>
+
+  <p><strong>Заметка 1.</strong> Отметим, что рисунки — это лишь изображения (портреты) графов. Сами же графы — это формальные понятия, выраженные на языке теории множеств.</p>
+  <p><strong>Определение 2.</strong> Две вершины x, y смежны тогда и только тогда, когда (x, y) ∈ E.</p>
+  <p><strong>Определение 3.</strong> Вершина x и ребро (a, b) инцидентны тогда и только тогда, когда x = a или x = b.</p>
+  <p><strong>Определение 4.</strong> Степенью вершины x (обозначается как d(x) или deg(x)) называется число рёбер, инцидентных x:</p>
+  <code>d(x) = |{(x, y) : (x, y) ∈ E}|.</code>
+  <p>Вершина со степенью, равной 0, называется изолированной.</p>
+  <p><strong>Определение 5.</strong> Петля — ребро имеющее вид (x, x).</p>
+  <p><strong>Определение 6.</strong> Кратные ребра — это ребра, соединяющие одну и ту же пару вершин (x, y).</p>
+  <p><strong>Определение 7.</strong> Кратность ребра — это количество ребер в графе G, соединяющих пару вершин (x, y).</p>
+
+  <p><strong>Лемма 1 (лемма о рукопожатиях).</strong> Сумма степеней вершин графа равняется удвоенному количесву ребер:</p>
+  <code>Σd(x) = 2m, (x∈V)</code>
+  <p>где m — количество рёбер графа.</p>
+  <p><strong>Лемма 2.</strong> В произвольном графе обязательно найдутся две вершины одинаковой степени.</p>
+
+  <p><strong>Определение 8.</strong> Путь — это последовательность вершин p = (x0, x1, ..., xk), где для всех i (0 ≤ i ≤ k) верно (xi, xi+1) ∈ E.</p>
+  <p><strong>Определение 9.</strong> Длина пути — количество рёбер, входящих в путь (на 1 меньше количества вершин в пути).</p>
+  <p><strong>Определение 10.</strong> Простой путь — это путь, в котором все вершины различны.</p>
+  <p><strong>Определение 11.</strong> Цикл — такой путь, длина которого не менее 1 и который начинается и заканчивается в одной и той же вершине (то есть x0 = xk).</p>
+  <p><strong>Определение 12.</strong> Простой цикл — это цикл, в котором все вершины различны (кроме начальной и конечной вершины x0 = xk).</p>
+  <p><strong>Определение 13.</strong> Вершина y достижима из вершины x тогда и только тогда, когда существует путь из x в y.</p>
+  <p><strong>Определение 14.</strong> Компонента связности — максимальный по включению связный подграф графа.</p>
+  <p><strong>Определение 15.</strong> Мост — ребро (x, y), при удалении которого количество компонент связности увеличивается.</p>
+  <p><strong>Определение 16.</strong> Связный граф — такой, что из любой вершины достижима любая другая.</p>
+  <p><strong>Определение 17.</strong> Дерево — связный ациклический граф.</p>
+
+  <p><strong>Теорема 1.</strong> Пусть G — неориентированный граф, тогда любая пара из трёх утверждений следует третье (и истинность любой пары фактов — критерий того, что G является деревом):</p>
+  <ol>
+    <li>n = m + 1 (n — количество вершин, m — количество рёбер),</li>
+    <li>G — связный граф,</li>
+    <li>G — ациклический (не содержит простых циклов).</li>
+  </ol>
+  <p><strong>Определение 18.</strong> Лес — это такой граф, каждая компонента связности которого является деревом. Количество компонент связности леса равно n - m.</p>
+
+  <h4>Ориентированные графы</h4>
+
+  <p>В ориентированном графе появляется направление у ребра, это крайне важное отличие от неориентированного графа. Если в неориентированном графе по ребру (a, b) можно было передвигаться как из вершины a в вершину b, так и в обратном направлении, то в ориентированном графе движение только из a в b. Направление строго фиксируется порядком записи вершин в ребре (a, b).</p>
+  <p>Пример ориентированного графа. Граф на рис. 2 состоит из 8 вершин и 11 ребер: (1, 2), (1, 3), (1, 7), (3, 1), (3, 6), (3, 5), (4, 1), (4, 5), (5, 4), (6, 5), (7, 4).</p>
+  <p><strong>Определение 19.</strong> Ориентированный граф — это упорядоченная пара двух множеств G = (V,E), где 0 ≤ |V| ≤ ∞, E ⊆ V2 (то есть E ⊆ {(x, y)|x, y ∈ V}). Ориентированный граф можно называть орграфом.</p>
+  <p><strong>Определение 20.</strong> Дуга — это ребро (a, b), имеющее направление. Из вершины a можно перейти в вершину b по дуге (a, b), однако переход из вершины b в вершину a по ребру (a, b) запрещен.</p>
+  <p><strong>Определение 21.</strong> Вершина x и дуга (a, b) инцидентны тогда и только тогда, когда x = a или x = b.</p>
+  <p><strong>Определение 22.</strong> Степень исхода вершины — количество исходящих дуг:</p>
+  <code>d+(x) = |{(x, y) : (x, y) ∈ E}|.</code>
+  <p><strong>Определение 23.</strong> Степень входа вершины — количество входящих дуг:</p>
+  <code>d-(x) = |{(y, x) : (y, x) ∈ E}|.</code>
+  <p>В графе на рис. 2 у вершины 1 степень исхода 3, степень входа 2.</p>
+  <p><strong>Определение 24.</strong> Путь — это последовательность вершин p=(x0, x1, ..., xk), где для всех i (0 ≤ i &lt; k) верно (xi, xi+1) ∈ E.</p>
+  <p><strong>Определение 25.</strong> Вершина y достижима из вершины x тогда и только тогда, когда существует путь из x в y.</p>
+  <p><strong>Определение 26.</strong> Орграф называется сильно связным, если из любой вершины достижима любая другая вершина. Компонента сильной связности — максимальный по включению сильно связный подграф.</p>
+
+  <h4>Классы графов</h4>
+
+  <p>Приведем оценку для количества вершин и ребер в графе. Очевидно, что в графе не может быть отрицательного количества ребер. Допустим, в нашем графе n вершин, нет петель и нет кратных ребер, а любая вершина инцидентна с любой другой вершиной. Количество ребер m будет равняться</p>
+  <code>m = n(n - 1)/2.</code>
+  <p>Следовательно, для любого графа без петель и кратных ребер верно неравенство на количество ребер m:</p>
+  <code>0 ≤ m ≤ n(n - 1)/2.</code>
+  <p>Определение 27. Пустой граф — это граф без рёбер (m = 0). Иногда такие графы называются вполне несвязными. Пустой граф из n вершин обозначается символом Oₙ.</p>
+  <p><strong>Определение 28.</strong> Полный граф — это граф c максимальным количеством рёбер (m = n(n - 1)/2). Полный граф из n вершин обозначается символом Kₙ. Например, K₂ — отрезок, а K₃ — треугольник.</p>
+  <p><strong>Определение 29.</strong> Регулярный граф — это граф, у которого все степени вершин равны. В k-регулярном графе все степени равны k. Например:</p>
+  <ul>
+    <li>0-регулярные графы — пустые;</li>
+    <li>1-регулярные графы содержат чётное число вершин, представляющие собой набор отрезков;</li>
+    <li>2-регулярные графы — объединения непересекающихся циклов;</li>
+    <li>(n - 1)-регулярные графы — полные графы.</li>
+  </ul>
+  <p><strong>Определение 30.</strong> Граф называется двудольным, если все его вершины можно разместить в двух не пересекающихся множествах, так что любое ребро графа будет соединять вершины из двух разных множеств.</p>
+
+  <h4>Способы хранения графов</h4>
+
+  <p>Существуют три классических способа задания графа:</p>
+  <ol>
+    <li>матрица смежности,</li>
+    <li>список смежности,</li>
+    <li>список ребер.</li>
+  </ol>
+  <p>Разные способы хранения графа удобны в разных ситуациях. Рассмотрим каждый из них на примере графа, представленного рис. 3. Pic 3. Неориентированный граф.</p>
+
+  <h4>Матрица смежности</h4>
+
+  <p>Классическое представление графа — это матрица смежности, популярный и простой в реализации способ хранения графа, который имеет свои недостатки.</p>
+  <p><strong>Определение 31.</strong> Матрица смежности — это квадратная матрица n x n (n — количество вершин), состоящая из нулей и единиц, где на пересечении i-й строки и j-го столбца находится 1 тогда и только тогда, когда вершина j смежная с вершиной i.</p>
+  <p>Пример задания матрицы смежности в неориентированном графе, изображенном на рис. 3:</p>
+<pre>
+0 1 0 0 1 0 1
+1 0 1 0 0 0 0
+0 1 0 1 1 0 0
+0 0 1 0 0 0 0
+1 0 1 0 0 1 1
+0 0 0 0 1 0 0
+1 0 0 0 1 0 0
+</pre>
+
+  <p>Основные недостатки такого представления:</p>
+  <ol>
+    <li>Занимает O(n²) памяти, поскольку для каждой вершины хранится существование ребра для всех остальных вершин. Например, если в графе 10² вершин и порядка 10² ребер, то такое представление займет 10¹⁰ ячеек памяти.</li>
+    <li>Перечисление всех смежных вершин занимает O(n) времени, даже если степень вершины маленькая.</li>
+  </ol>
+  <p>Реализация кода для записи матрицы смежности:</p>
+<pre>
+int n, m;
+cin >> n >> m;
+vector&lt;vector&lt;int&gt; &gt; G(n + 1, vector&lt;int&gt;(n + 1));
+
+for (int i = 0; i &lt; m; i++) {
+  int x, y;
+  cin >> x >> y;
+  G[x][y] = 1;
+  G[y][x] = 1;
+}
+</pre>
+
+  <h4>Списки смежности</h4>
+
+  <p>Поскольку чаще всего в задачах граф достаточно разреженный, выгодно использовать списки смежности.</p>
+  <p><strong>Определение 32.</strong> Список смежности — это неравномерная матрица из порядка 2 x m элементов (m — количество ребер), в i-ой строке которой перечислены смежные вершины к i-ой вершине.</p>
+  <p>Пример задания списка смежности в неориентированном графе по рис. 3:</p>
+<pre>
+1 : 2 5 7;
+2 : 1 3;
+3 : 2 4 5;
+4 : 3;
+5 : 1 3 6 7;
+6 : 5;
+7 : 1 5.
+</pre>
+
+  <p>Список смежности в C++ удобно хранить в виде вектора векторов целых чисел (т. е. как vector&lt;vector&lt;int&gt; &gt;). Иногда в качестве внешнего вектора используется массив. Размер внешнего вектора — количество вершин графа n, а i-я ячейка содержит список (вектор) всех вершин, которые смежны с i-й. Такое представление графа значительно более компактно (занимает O(n + m) единиц памяти).</p>
+  <p>Следующий код считывает неориентированный граф. Вершины пронумерованы от 1 до n:</p>
+<pre>
+int n, m;
+cin >> n >> m;
+vector&lt;vector&lt;int&gt; &gt; G(n + 1);
+
+for (int i = 0; i &lt; m; i++) {
+  int x, y;
+  cin >> x >> y;
+  G[x].push_back(y);
+  G[y].push_back(x);
+}
+</pre>
+
+  <h4>Список ребер</h4>
+
+  <p>Самый непопулярный способ хранения графа при решении задач, однако крайне удобный способ задать граф в задачах в качестве входных данных.</p>
+  <p><strong>Определение 33.</strong> Список ребер — это массив пар элементов размера m (m — количество ребер), состоящий из пар целых чисел (xᵢ, yᵢ), где xᵢ и yᵢ — номера вершин, соединенных ребром (xᵢ, yᵢ).</p>
+  <p>Пример задания списка ребер в неориентированном графе по рис. 3: (1, 2), (1, 5), (1, 7), (2, 3), (3, 4), (3, 5), (5, 6), (5, 7).</p>
+  <p>Данный метод имеет огромные недостатки при обработке графа.</p>
+  <ol>
+    <li>Для поиска всех смежных вершин для вершины x потребуется линейный проход по всему списку ребер, что займет O(m) действий.</li>
+    <li>Поиск любого ребра занимает порядка O(m) операций.</li>
+  </ol>
+
+  <p>Реализация кода для записи списка ребер:</p>
+<pre>
+int n, m;
+cin >> n >> m;
+vector&lt;pair&lt;int, int&gt; &gt; G(m);
+
+for (int i = 0; i &lt; m; i++) {
+  cin >> G[i].first >> G[i].second;
+}
+</pre>
+
+  <h4>Хранение взвешенного графа</h4>
+
+  <p>Отметим, что в ряде задач ребра графа имеют собственный вес, который учитывается при решении задачи. Например, для прохода по ребру необходимо заплатить монетки или потратить время для прохождения ребра. Время и количество монеток являются весом ребра.</p>
+  <p>Данное усложнение немного изменяет способы хранения графа. Чаще всего такие графы задаются следующим образом. В качестве входных параметров дается n, m — количество вершин и ребер в графе. Далее следует список ребер в формате троек xᵢ, yᵢ, wᵢ — xᵢ, yᵢ номера вершин соединенных i ребром, wᵢ вес i ребра.</p>
+  <p>Pic 4. Неориентированный взвешенный граф.</p>
+
+  <p><strong>Определение 34.</strong> Матрица смежности (во взвешенном графе) — это квадратная матрица n x n (n — количество вершин), где на пересечении i-й строки и j-го столбца находится wᵢ тогда и только тогда, когда вершина j смежная с вершиной i и имеет вес, равный wᵢ, иначе помечается несуществующим весом (-1).</p>
+  <p>Представим граф с рис. 4 в виде матрицы смежности:</p>
+<pre>
+-1  6  6 -1  3 -1
+ 6 -1  5 -1 -1 -1
+ 6  5 -1  5  7 -1
+-1 -1  5 -1 -1 -1
+ 3  1  7 -1 -1  1
+-1 -1 -1 -1  1 -1
+</pre>
+
+  <p><strong>Определение 35.</strong> Список смежности — это неравномерная матрица из порядка 2 x m элементов (m — количество ребер), в i-ой строке располагается список пар элементов, вес ребра и номер смежной вершины.</p>
+  <p>Представим граф с рис. 4 в виде списка смежности:</p>
+<pre>
+1 : (6, 2), (6, 3), (3, 5);
+2 : (6, 1), (5, 3);
+3 : (6, 1), (5, 2), (5, 4), (7, 5);
+4 : (5, 3);
+5 : (3, 1), (7, 3), (1, 6);
+6 : (1, 5).
+</pre>
+
+  <p>Приведем реализацию инициализации списка смежности для неориентированного взвешенного графа:</p>
+<pre>
+int n, m;
+cin >> n >> m;
+vector&lt;vector&lt;pair&lt;int, int&gt; &gt; &gt; G(n + 1);
+
+int x, y, w;
+pair&lt;int, int&gt; tmp;
+
+for (int i = 0; i &lt; m; i++) {
+  cin >> x >> y >> w;
+  tmp.first = w;
+  tmp.second = x;
+  G[y].push_back(tmp);
+  tmp.second = y;
+  G[x].push_back(tmp);
+}
+</pre>
 </article>
 
 
