--- a/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
@@ -17,16 +17,16 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p">Линейные алгоритмы</a>
-  </p>
-  <p>
-    <a href="#t1">Задача 1. Какого элемента нет</a>
+         <a href="#p">Линейные алгоритмы</a>
+    <br><a href="#t1">Задача 1. Какого элемента нет</a>
     <br><a href="#t2">Задача 2. Максимальная сумма</a>
     <br><a href="#t3">Задача 3. Максимальная разница</a>
     <br><a href="#t4">Задача 4. Минимальный и максимальный</a>
     <br><a href="#t5">Задача 5. Пять максимумов</a>
     <br><a href="#t6">Задача 6. Частотный словарь</a>
-    <br><a href="#task1">Задача A. Правый минус левый</a>
+  </p>
+  <p>
+        <a href="#task1">Задача A. Правый минус левый</a>
     <br><a href="#task2">Задача B. Клиппи и Мерлин грабят банк</a>
     <br><a href="#task3">Задача C. Сумма на подотрезке</a>
     <br><a href="#task4">Задача D. Пропажа числа</a>
