--- a/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
@@ -17,12 +17,12 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p">Префикс-функция</a>
+         <a href="#p">Префикс-функция</a>
+    <br><a href="#t1">Задача 1. Найти сумму от l до r</a>
+    <br><a href="#t2">Задача 2. Найти сумму в матрице</a>
   </p>
   <p>
-    <a href="#t1">Задача 1. Найти сумму от l до r</a>
-    <br><a href="#t2">Задача 2. Найти сумму в матрице</a>
-    <br><a href="#task1">Задача A. Трудная задача</a>
+        <a href="#task1">Задача A. Трудная задача</a>
     <br><a href="#task2">Задача B. Интервалы</a>
     <br><a href="#task3">Задача C. Сумма чисел в массиве</a>
     <br><a href="#task4">Задача D. Массивные запросы</a>
