--- a/src/components/code/code-c/c-books/pages/elem-book6.html
+++ b/src/components/code/code-c/c-books/pages/elem-book6.html
@@ -2215,6 +2215,91 @@ month_day(struct date *pd) {
   <h4>7.4 Ссылки на записи (116)</h4>
 
   <h4>7.5 Записи со ссылками на самое себя (118)</h4>
+
+  <h4>Программа 81 (120)</h4>
+  <p>Напишем функцию treeprint которая рекурсивно печатает дерево.</p>
+<pre>
+treeprint(struct tnode *p) {
+  if (p != NULL) {
+    treeprint(p->left);
+    printf("4d %s\n", p->count, p->word);
+    treeprint(p->right);
+  }
+}
+</pre>
+
+  <h4>7.6 Просмотре таблиц (121)</h4>
+
+  <p>Любой блок в цепочке это запись, состоящая из ссылок на имя, на замещающих текст и на следующий блок в этой цепочке. Нулевая ссылка на следующий блок сигнализирует о конце цепочки</p>
+
+  <h4>Программа 82 (122)</h4>
+  <p>Напишем основную строку таблицы</p>
+<pre>
+struct nlist {
+  char *name;
+  char *def;
+  struct nlist *next;
+}
+</pre>
+
+  <p>Напишем массив ссылок</p>
+<pre>
+#define HASHSIZE 100
+static struct nlist *hashtab[HASHSIZE];
+</pre>
+
+  <p>Функция свертки, используемая в lookup и install, просто складывает значения символов в строке по модулю размера массива.</p>
+<pre>
+hash(char *s) {
+  int hashval;
+  for (hashval = 0; *s != '\0') {
+    hashval += *s++;
+  }
+  return hashval % HASHSIZE;
+}
+</pre>
+
+  <h4>7.7 Поля (123)</h4>
+
+  <p>На одних машинах поля размещаются в слове слева направо, а на других - справа налево, все зависит от особенностей аппаратуры.</p>
+  <p>Поля не имеют знака. Их можно хранить лишь в целых без знака переменных. Они не могут быть массивами и не имеют адресов, поэтому к ним нельзя применять операцию &.</p>
+
+  <h4>7.8 Смеси (125)</h4>
+
+  <p>Смесь это некоторая переменная, могущая хранить объекты различного типа и размера. Смеси дают возможность работать в одной и той же области памяти с данными различного вида.</p>
+<pre>
+union u_tag {
+  int ival;
+  float fval;
+  char *pval;
+}
+</pre>
+  <p>Переменная u_tag достаточно велика чтобы сохранить самый большой из этих трех типов. Любой из этих трех типов можно присвоить *uval. Помнить о том какой тип сейчас хранится в переменой типа смесь это обязанность программиста.</p>
+  <p>Практически смесь это запись, все элементы которой имеют нулевое смещение, причем сама запись достаточно велика, чтобы сохранить самый объемный элемент и выровнена так, чтобы можно было работать со всеми смешиваемыми типами.</p>
+  <p>Можно только обращаться к отдельным элементам смеси или брать ее адрес, но смеси нельзя передавать функциям и получать от функций.</p>
+
+  <h4>7.9 Определение типа (126)</h4>
+
+  <p>В языке Си можно создавать имена для новых типов данных. Для этого используется определение типа</p>
+  <code>typedef int LENGTH;</code>
+  <p>Теперь имя LENGTH это псевдоним типа int.</p>
+  <code>typedef char* STRING;</code>
+  <p>Теперь имя STRING это синоним типа char*, т.е. ссылки на символ.</p>
+
+  <h4>Программа 83 (127)</h4>
+  <p>Определим тип для ветвей дерева</p>
+<pre>
+typedef struct tnode {
+  char *word;
+  int count;
+  struct tnode *left;
+  struct tnode *right;
+} TREENODE, *TREEPTR;
+</pre>
+  <p>Теперь имя TREENODE это запись, а TREEPTR это ссылка на эту запись.</p>
+
+  <p>Описание typedef не создает никакого нового типа, просто обавляет новое имя для существующего типа.</p>
+  <p>Описание типа обеспечивает лучшую документируемость программ. Ведь TREEPTR оенче преяить, чем ссылку на какую-то сложную запись.</p>
 </article>
 
 
@@ -2222,6 +2307,200 @@ month_day(struct date *pd) {
 <article class="article">
   <div class="anchor" id="p9"></div>
   <h3>Глава 8. Ввод и вывод (129)</h3>
+
+  <p>В языке Си не предусмотрены возможности для ввода и вывода. В стандартной библиотеке есть множество функций, обеспечивающих ввод и вывод для программ на Си. Функции отражают только те операции, которые можно найти в большинстве современных операционных систем.</p>
+
+  <h4>8.1 Обращение к стандартной библиотеке (129)</h4>
+
+  <p>Чтобы в программе обратиться к стандартной библиотеке, нужно нписать такую строку</p>
+  <code>#include &lt;stdio.h&gt;</code>
+
+  <h4>8.2 Стандартный ввод и вывод (130)</h4>
+
+  <h4>Программа 84 (131)</h4>
+  <p>Перевод вводимых символов в нижний регистр</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int c;
+  while ((c = getchar()) != EOF) {
+    putchar(isupper(c) ? tolower(c) : c);
+  }
+}
+</pre>
+
+  <h4>8.3 Форматный вывод printf (131)</h4>
+
+  <code>printf(control [, arg1, arg2, ...]);</code>
+
+  <p>Функция printf() печатает в выходной поток управляющую строку, заменяя спецификаторы переданными аргументами.</p>
+  <p>Если управляющая строка содержит только обычные символы, то аргументы не передаются. Если управляющая строка содержит N спецификаторов, то передается ровно N аргументов. Каждый спецификатор начинается символом % и содержит спецификацию преобразования. Функция printf использует первый параметр control, чтобы определить сколько всего параметров.</p>
+
+  <h4>8.4 Форматный ввод scanf (133)</h4>
+
+  <code>scanf(control [, arg1, arg2, ...]);</code>
+
+  <p>Функция scanf() читает символы из входного потока и записывает результаты в параметры, заданными в управляющей строке и переданные как аргументы.</p>
+  <p>Каждый параметр должен быть ссылкой, указывающей где нужно сохранять преобразованную согласно спецификатору входную информацию. Пробелы, табуляция, переход на новую строку игнорируются. Обычные символы должны совпадать с символами во входном потоке. Спецификаторы начинаются с символа % и задают преобразование для входного символа.</p>
+
+  <h4>Программа 85 (134)</h4>
+  <p>Примитивный калькулятор</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  double sum, v;
+  sum = 0;
+  while (scanf("%lf", &v) != EOF) {
+    putchar("\t%.2f\n", sum += v);
+  }
+}
+</pre>
+
+  <h4>8.5 Форматные преобразования в памяти (135)</h4>
+
+  <p>Функции printf и scanf имеют двойников sprintf и sscanf.</p>
+
+  <code>sprintf(string, control [, arg1, arg2, ...]);</code>
+  <p>Функция sprintf работает со строкой и берет информацию из строки string</p>
+
+  <code>sscanf(string, control [, arg1, arg2, ...]);</code>
+  <p>Функция sscanf работает со строкой и выводит информацию в string</p>
+
+  <h4>8.6 Доступ к файлам (135)</h4>
+
+  <p>Прежде чем читать или записывать в файл, нужно его открыть с помощью стандартной библиотечной функции fopen. Эта функция обращается к операционной системе, находит нужный файл и возвращает ссылку на файл, которую следует присвоить переменной типа FILE и использовать при чтении или записи в файл. Ссылка на файл содержит местоположение файла, позицию текущего символа, режим в котором открыт файл - чтение или запись.</p>
+  <code>FILE fp = fopen(name, mode);</code>
+  <p>Первый параметр name это строка, содержащая имя файла. Второй параметр это строка, задающая режим работы с файлом. Если происходит ошибка при открытии файла, то fopen возвращает NULL.</p>
+  <p>Прочитаем символ из открытого файла</p>
+  <code>char c = getc(fp);</code>
+  <p>Запишем символ в открытый файл</p>
+  <code>putc(c, fp);</code>
+
+  <p>С началом работы любой программы автоматически открываются три файл это стандартный вход, стандартный выход и стандартный выход ошибок. Есть три ссылки на эти файлы stdin, stdout, stderr. Первоначально они связаны с терминалом, но по ходу программы их можно переопределять на другие устройства, например на файлы.</p>
+  <code>#define getchar() getc(stdin)</code>
+  <code>#define putchar() putc(c, stdout)</code>
+
+  <p>Функции printf и scanf имеют еще одних двойников fprintf и fscanf.</p>
+
+  <code>fprintf(*file, control [, arg1, arg2, ...]);</code>
+  <p>Функция fprintf работает с файлом, на который указывает ссылка *file</p>
+
+  <code>fscanf(*file, control [, arg1, arg2, ...]);</code>
+  <p>Функция fscanf работает с файлом, на который указывает ссылка *file</p>
+
+  <h4>Программа 86 (137)</h4>
+  <p>Напишем программу cat, объединяющую два файла</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+void filecopy(FILE *fp);
+
+int main(int argc, char *argv[]) {
+  FILE *fp;
+  if (argc == 1) {
+    filecopy(stdin);
+  } else {
+    while (--argc > 0) {
+      if ((fp = fopen(*++argv, "r")) == NULL) {
+        printf("cat: can't open %s file\n", *argv);
+        break;
+      } else {
+        filecopy(fp);
+        fclose(fp);
+      }
+    }
+  }
+}
+
+filecopy(FILE *fp) {
+  int c;
+  while ((c = getc(fp)) != EOF) {
+    putc(c, stdout);
+  }
+}
+</pre>
+
+  <p>Ссылки на файлы stdin и stdout определены в библиотеке stdio.h как ссылки на стандартные входной и выходной потоки. Их можно использовать везде, где допускаются объекты типа FILE*. Однако это константы, а не переменные и им нельзя что-любо присваивать.</p>
+  <p>После работы с файлом, открытым функцией fopen, его нужно обязательно закрыть функцией fclose. После этого ссылка на файл будет свободна и ее можно использовать для другого файла. Операционная система ограничивает число одновременно открытых файлов в одной программе, поэтому ненужные ссылки надо сразу освобождать. Функция fclose также опустошает буфер, где putc накапливает информацию. При нормальном завершении программы, для каждого открытого в программе файла автоматически вызывается fclose.</p>
+
+  <h4>8.7 Реакция на ошибки. stderr и exit (138)</h4>
+
+  <p>Информация, записанная в stderr появляется на экране, даже если стандартный выходной поток от экрана отключен.</p>
+
+  <h4>Программа 87 (138)</h4>
+  <p>Перепишем программу cat, чтобы она выдавала сообщение об ошибке в стандартный файл ошибок</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+void filecopy(FILE *fp);
+
+int main(int argc, char *argv[]) {
+  FILE *fp;
+  if (argc == 1) {
+    filecopy(stdin);
+  } else {
+    while (--argc > 0) {
+      if ((fp = fopen(*++argv, "r")) == NULL) {
+        fprintf(stderr,
+              "cat: can't open %s file\n", *argv);
+        exit(1);
+      } else {
+        filecopy(fp);
+        fclose(fp);
+      }
+    }
+  }
+  exit(0);
+}
+
+filecopy(FILE *fp) {
+  int c;
+  while ((c = getc(fp)) != EOF) {
+    putc(c, stdout);
+  }
+}
+</pre>
+
+  <p>При обращении к стандартной библиотечной функции exit, выполнение программы заканчивается. Если возвращается значение 0, то все прошло хорошо. Отличное от нуля значение означает аварийное завершение программы. Перед выходом из программы, функция exit обращается к функции fclose для каждого открытого в программе файла.</p>
+
+  <h4>8.8 Ввод и вывод строк (139)</h4>
+
+  <p>Функция fgets() читает из файла fp в символьный массив line очередную входную строчку, включая символ новой строки.</p>
+  <code>fgets(line, MAXLINE, fp);</code>
+  <p>Может быть считано не молее MAXLINE - 1 символов, последним к ним добавится символ '\0'.</p>
+
+  <p>Функци fputs() записывает в файл fp строку, не обязательно содержащую символ новой строки.</p>
+
+  <h4>Программа 88 (139)</h4>
+  <p>Напишем функции fgets, fputs также, как они находятся в библиотеке ввода-вывода</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+char *fgets(char *s, int n, register FILE *iop) {
+  register int c;
+  register char *cs;
+
+  cs = s;
+  while (--n > 0 && (c = getc(iop)) != EOF) {
+    if ((*cs++ = c) == '\n') {
+      break;
+    }
+  }
+  *cs = '\0';
+  return (c == EOF && cs == s) ? NULL : s;
+}
+
+fputs(register char *s, register FILE *iop) {
+  register int c;
+  while (c = *s++) {
+    putc(c, iop);
+  }
+}
+</pre>
+
+  <h4>8.9 Некоторые полезные функции (140)</h4>
 </article>
 
 
