--- a/src/components/code/code-c/c-books/pages/elem-book8.html
+++ b/src/components/code/code-c/c-books/pages/elem-book8.html
@@ -42,6 +42,27 @@
   <div class="anchor" id="p1"></div>
   <h3>1 Введение в компьютеры, Internet и World Wide Web (21)</h3>
 
+  <h4>1.1 Введение (22)</h4>
+  <h4>1.2 Что такое компьютер (23)</h4>
+  <h4>1.3 Внутренняя организация компьютера (24)</h4>
+  <h4>1.4 Персональные вычисления, распределенные вычисления и вычисления в модели клиент/сервер (25)</h4>
+  <h4>1.5 Интернет и всемирная паутина (25)</h4>
+
+  <h4>1.6 Машинные языки, языки ассемблера и языки высокого уровня (26)</h4>
+
+  <p>Все языки разбиты на три категории</p>
+  <ol>
+    <li>Машинные языки</li>
+    <li>Ассемблерные языки</li>
+    <li>Языки высокого уровня</li>
+  </ol>
+  <p>Каждый компьютер может понимать только свой машинный язык, связанный с его архитектурой и аппаратурой. Машинные языки состоят из последовательностей единиц и нулей, которые являются командами на выполнение элементарных операций. Программы на машинных языках не переносимы на компьютеры с разной архитектурой и неудобны для восприятия человеком.</p>
+  <p>Программирование на машинных языках тормозило развитие компьютерной техники, очень медленное и непосильное занятие для большинства программистов.</p>
+  <p>Вместо последовательности чисел стали применяться англоязычные аббревиатуры, которые стали применяться  в языке ассемблера.</p>
+  <p>Программисты стали писать на языке ассемблера, а специальные программы-трансляторы преобразовывали программы на машинный язык.</p>
+  <p>С появлением языков ассемблера использование компьютеров значительно расширилось, однако все еще писалось большое количество кода для решения простейших задач. Для ускорения программирования были разработаны языки высокого уровня, в которых выполнение сложных действий заменялось одним оператором. Программисты стали писать на языках высокого уровня, а программы-компиляторы переводили написанное на машинный язык.</p>
+  <p>Языки высокого уровня предпочтительнее чем ассемблерные и машинные языки.</p>
+
   <h4>1.7 История языка Си (27)</h4>
 
   <p>Язык Си берет свое начало от двух языков BCPL и B. В 1967 году Мартин Ричардс разработал BCPL как язык для написания системного ПО и компиляторов. В 1970 году Кен Томпсон использовал B для создания ранних версий ОС UNIX на компьютере DEC PDP-7. В языках BCPL и B переменные не разделялись на типы. Каждое значение данных занимало одно слово в памяти. Ответственность за различие целых и действительных чисел целиком ложилась на плечи программиста.</p>
@@ -62,5 +83,155 @@
   <p>Язык C++ является надмножеством языка Си. Язык C++ разработал Бьерн Страуструп. В языке реализованы средства для ООП. В программном мире происходит революция. Быстрое, надежное, экономичное создание программ остается труднодостижимой целью. Применение ООП позволяет повысить производительность программистов.</p>
 
   <p>Сегодня наилучшей стратегией обучения будет освоение языка Си, а затем изучение C++.</p>
+
+  <h4>1.10 Java</h4>
+
+  <p>Родственным C и C++ является язык Java. Корпорация Sun Microsystems в 1991 году на основе C/C++ стали разрабатывать новый язык, которому его создатель Джеймс Гослинг дал имя Oak в честь дуба, который рос за окном его кабинета в Sun. Однако, оказалось, что уже есть компьютерный язык под названием Oak, тогда в местной кофейне предложили назвать язык Java и это название прижилось. Sun формально объявила о языке Java на торговой выставке в мае 1995 года.</p>
+
+  <h4>1.11 Fortran, Cobol, Pascal и Ada (30)</h4>
+
+  <p>В 1950-х годах корпорация IBM разработала Fortran (FORmula TRANslation) в качестве языка для научных и технических приложений, в которых требуются сложные математические вычисления.</p>
+  <p>Ы 1959 году разработали язык Cobol (COmmon Business OrientedLanguage) для коммерческих прикладных программ в которых требовалась высокая точность при обработке большого количества данных.</p>
+  <p>В 1960-е годы большие программные проекты сталкивались с трудностями. Сроки разработки затягивались, расходы значительно превышали бюджет, а продукты получались ненадежны. Это привело к структурному прошграммированию - упорядоченному подходу к написанию более ясных программ, которые легче тестировать, отлаживать и модифицировать чем неструктурнированные.</p>
+  <p>В резуьтате, в 1971 году профессором Никласом Виртом был разработан язык Pascal, который предназначался как язык для обучения структурному программированию. В нем отсутствуют многие элементы для коммерческих, промышленных и административных приложений, поэтому он не получил широкого распространения.</p>
+  <p>В начале 1980-х под эгидой министерства обороны США был создан язык Ada. Для создания огромной массы программных систем управлени и контроля МО использовались сотни различных языков. Хотелось иметь единственный язык, который удовлетворял бы всем нуждам. Важная особенность языка Ada - многозадачность, позволяющая выполнять действия параллельно. Многие языки, в том числе C/C++ однозадачны.</p>
+
+  <h4>1.12 Basic, Visual Basic, Visual C++, C# и .NET (30)</h4>
+
+  <p>В середине 1960-х годов был написан язык Basic (Beginner's All-Purpose Symbolic Instruction Code) для написания простых программ. Основной целью было ознакомить новичков с программированием.</p>
+  <p>В 1991 году корпорация Microsoft представила язык Visual Basic для упрощения разработки приложений Microsoft Windows.</p>
+  <p>Visual Basic .NET, Visual C++ .NET и C# были разработаны для новой программной платформы .NET от Microsoft.</p>
+
+  <h4>1.13 Ключевая тенденция в программировании: объектная технология (31)</h4>
+
+  <p>Язык C++ унаследовал все возможности языка Си, дополнив их средствами манипулирования объектами, заимствованными у Simula. Ни Си, ни C++ не предназначались для широкого использования вне стен лабораторий AT&T. Но очень быстро оба стали доступны для рядовых программистов.</p>
+  <p>Мы живем в мире объектов. Машины, самолеты, люди, животные, здания... Программные языки (Fortran, Pascal, Basic, C) концентрировали внимание на действиях (глаголах), а не вещах или объектах (существительных). Объектные языки (C++, Java) позволяют программистам живущим в мире объектов писать программы с помощью объектов, что делает труд гораздо производительнее. Это порождает более понятные, лучше организованные программы, которые проще сопровождать, модифицировать и отлаживать. Это важно, так как 80% стоимости программного продукта связано с его сопровождением на протяжении долгих лет.</p>
+
+  <h4>1.4 Схема типичной среды разработки Си (32)</h4>
+
+  <p>Система среды разработки на языке Си состоит из трех частей</p>
+  <ol>
+    <li>Среда программирования</li>
+    <li>Язык Си</li>
+    <li>Стандартная библиотека</li>
+  </ol>
+  <p>Создание программы проходит через 6 стадий</p>
+  <ol>
+    <li>Написание кода в редакторе кода и сохранение его в файле с расширением .c</li>
+    <li>Препроцессорная обработка. Когда вводится команда на компиляцию программы, первой выполняется программа препроцессора. Она выполняет все директив препроцессора, написанные в программе.Например, добавление файлов к коду программы, замена символов в тексте программы</li>
+    <li>Компиляция. Компилятор преобразует программу в машинный язык и в результате сохраняет объектный код в файле с расширением .o</li>
+    <li>Компоновка. В программах на языке Си содержатся обращения к функциям, определенным в стандартной библиотеке. Поэтому объектный код после работы компилятора содержит "дыры", обусловленные отсутствием определенных функций, к которым происходит обращение. Компоновщик связывает объектный код с определениями отсутствующих функций и результат сохраняет в файл с расширением .exe в котором уже нет отсутствующих частей.</li>
+    <li>Загрузка. Перед выполнением программа должна быть размещена в памяти. Загрузчик помещает в память исполняемый код, также могут загружаться библиотеки не входящие в исполняемый код.</li>
+    <li>Исполнение. Компьютер выполняет программу, последовательно прочитывая инструкции одна за другой</li>
+  </ol>
+
+  <p>Программы получают и выводят данные. Конкретные функции получают входные данные от stdin стандартный входной поток. Обычно это клавиатура, но stdin может быть подключен и к другому устройству. Вывод данных осуществляется на stdout стандартный выходной поток. Обычно это экран, но stdout также может быть подключен к другому устройству. Имеется еще один поток stderr стандартный поток ошибок.</p>
+
+  <h4>1.15 Тенденции в области аппаратных средств (35)</h4>
+
+  <p>Сообщество программистов процветает на волне непрерывного прогресса в технологиях оборудования, программного обеспечения и коммуникации. Каждый год возможности компьютеров, объемы памяти, быстродействие процессоров увеличиваются.</p>
+
+  <h4>1.16 Общие замечания о Си и этой книге (36)</h4>
+
+  <p>Хороший стиль программирования. Пишите программы в простой, четкой манере придерживаясь принципа KISS Keep It Simple.</p>
+  <p>Совет по переносимости. Существует много проблем совместимости между разными версиями Си и разными компьютерами, что затрудняет достижение переносимости. Само по себе написание программ на Си не обеспечивает их переносимости.</p>
+</article>
+
+
+<!-- 2 Введение в программирование на C -->
+<article class="article">
+  <div class="anchor" id="p2"></div>
+  <h3>2 Введение в программирование на C (43)</h3>
+
+  <h4>2.1 Введение (44)</h4>
+
+  <p>Далее будет рассматриваться структурное программирование на языке Си.</p>
+
+  <h4>2.2 Простая программа на Си. Печать строки текста (44)</h4>
+
+  <details>
+    <summary>Программа 1 (44)</summary>
+    <p>Печать строки текста.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  printf("Welcome to C!\n");
+
+  return 0;
+}
+</pre>
+    <code>Welcome to C!</code>
+  </details>
+
+  <details>
+    <summary>Программа 2 (47)</summary>
+    <p>Печать в одну строку несколькими операторами printf.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  printf("Welcome ");
+  printf("to C!\n");
+
+  return 0;
+}
+</pre>
+    <code>Welcome to C!</code>
+  </details>
+
+  <details>
+    <summary>Программа 3 (47)</summary>
+    <p>Печать несколько строк одним оператором printf.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  printf("Welcome\nto\nC!\n");
+
+  return 0;
+}
+</pre>
+<pre>
+Welcome
+to
+C!
+</pre>
+  </details>
+
+  <h4>2.3 Еще одна простая программа на Си. Сложение двух целых чисел (48)</h4>
+
+  <details>
+    <summary>Программа 4 (48)</summary>
+    <p>Считать два числа оператором scanf, сложить их и вывести результат.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int a;
+  int b;
+  int sum;
+
+  printf("Enter first integer\n");
+  scanf("%d", &a);
+
+  printf("Enter second integer\n");
+  scanf("%d", &b);
+
+  sum = a + b;
+
+  printf("Sum is %d\n", sum);
+
+  return 0;
+}
+</pre>
+<pre>
+Enter first integer
+5
+Enter second integer
+3
+Sum is 8
+</pre>
+  </details>
 </article>
 
